# keyboardsounds

./: .gitignore  CNAME  LICENSE  README.md  _config.yml  build-runtime.ps1  build-runtime.sh  deployment.md  index.html  index.md  kbs-linux.spec  kbs-onefile.spec  kbs.spec  preview.mov  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-and-deploy.yml  build-application.yml  dev-build.yml  publish-python-package.yml  release-build.yml
_layouts/: default.html
application/: .gitignore  app_icon.icns  forge.config.js  package.json  webpack.main.config.js  webpack.renderer.config.js  webpack.rules.js
application/src/: main.js  preload.js
application/src/api/: core.js
application/src/ui/: app.jsx  editor.jsx  execute.js  index.css  index.html  index.js  renderer.js  wizard.jsx
docs/: app-rules.md  backend.md  custom-profiles.md  development.md  linux-support.md
example/: profile.yaml
images/: screens.pdn
iostypingsound/: .gitignore  audio_extractor.py  ios_keys.py  main.py  process_manager.py
iostypingsound/setup/: .gitignore
kbs-dist/: .gitignore
keyboard_sounds/: audio_manager.py  daemon.py  daemon_manager.py  main.py  profile.py
keyboard_sounds/profiles/typewriter/: profile.json
keyboardsounds/: .gitignore  __init__.py  app_detector.py  app_detector_linux.py  app_rules.py  audio_manager.py  daemon.py  daemon_manager.py  listener.py  main.py  path_resolver.py  profile.py  profile_builder.py  profile_validation.py  root.py
keyboardsounds/external_api/: __connection_handler.py  __external_api.py  __init__.py
keyboardsounds/profiles/: profile.template.yaml
keyboardsounds/profiles/alpaca/: profile.yaml
keyboardsounds/profiles/apex-pro-tkl-v2/: profile.yaml
keyboardsounds/profiles/apple-ios/: profile.yaml
keyboardsounds/profiles/banana-split/: profile.yaml
keyboardsounds/profiles/g502wireless/: profile.yaml
keyboardsounds/profiles/g502x-wireless/: profile.yaml
keyboardsounds/profiles/gateron-black-ink/: profile.yaml
keyboardsounds/profiles/gateron-red-ink/: profile.yaml
(+40 files in other folders)
