[project]
name = "keyboardsounds"
version = "5.4.0"
authors = [
  { name="Nathan Fiscaletti", email="nate.fiscaletti@gmail.com" },
]
description = "Adds the ability to play sounds while typing on any system."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nathan-fiscaletti/keyboardsounds"
