[project]
name = "keyboardsounds"
version = "5.7.6"
authors = [
  { name="Nathan Fiscaletti", email="nate.fiscaletti@gmail.com" },
]
description = "Adds the ability to play sounds while typing on any system."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies=[
  "pygame==2.5.2",
  "pynput==1.7.6",
  "psutil==5.9.4",
  "imageio-ffmpeg==0.4.6",
  "pyyaml==6.0.1"
]

[project.urls]
"Homepage" = "https://github.com/nathan-fiscaletti/keyboardsounds"

[project.scripts]
keyboardsounds = "keyboardsounds.main:main"
kbs = "keyboardsounds.main:main"