[project]
name = "keyboardsounds"
version = "5.8.9"
authors = [
  { name="Nathan Fiscaletti", email="nate.fiscaletti@gmail.com" },
]
description = "Adds the ability to play sounds while typing on any system."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies=[
  "pygame==2.6.1",
  "pynput==1.7.7",
  "psutil==6.1.0",
  "imageio-ffmpeg==0.5.1",
  "pyyaml==6.0.2",
  "setuptools==75.3.0",
  "requests==2.32.3"
]

[project.urls]
"Homepage" = "https://github.com/nathan-fiscaletti/keyboardsounds"

[project.scripts]
keyboardsounds = "keyboardsounds.main:main"
kbs = "keyboardsounds.main:main"